parser/GrapherParser.java
// Generated from Grapher.g4 by ANTLR 4.0
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrapherParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__21=1, T__20=2, T__19=3, T__18=4, T__17=5, T__16=6, T__15=7, T__14=8, 
		T__13=9, T__12=10, T__11=11, T__10=12, T__9=13, T__8=14, T__7=15, T__6=16, 
		T__5=17, T__4=18, T__3=19, T__2=20, T__1=21, T__0=22, ID=23, INT=24, WHITESPACE=25, 
		XML_COMMENT=26, SL_COMMENT=27, DOC_HTML=28, PRO_COMMENT=29;
	public static final String[] tokenNames = {
		"<INVALID>", "'type='", "'value='", "'source'", "'vertices'", "'<'", "'edges'", 
		"'capacity'", "'id='", "'vertex'", "'</'", "'>'", "'weight'", "'graph'", 
		"'/>'", "'sink'", "'workspace'", "'t_node'", "'s_node'", "'dijkstra'", 
		"'edmonds_karp'", "'\"'", "'edge'", "ID", "INT", "WHITESPACE", "XML_COMMENT", 
		"SL_COMMENT", "DOC_HTML", "PRO_COMMENT"
	};
	public static final int
		RULE_file = 0, RULE_graph = 1, RULE_graph_type = 2, RULE_vertices = 3, 
		RULE_vertex = 4, RULE_edges = 5, RULE_edge = 6, RULE_source = 7, RULE_sink = 8, 
		RULE_capacity = 9, RULE_weight = 10, RULE_s_node = 11, RULE_t_node = 12;
	public static final String[] ruleNames = {
		"file", "graph", "graph_type", "vertices", "vertex", "edges", "edge", 
		"source", "sink", "capacity", "weight", "s_node", "t_node"
	};

	@Override
	public String getGrammarFileName() { return "Grapher.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrapherParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public GraphContext graph() {
			return getRuleContext(GraphContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26); match(5);
			setState(27); match(16);
			setState(28); match(11);
			setState(29); graph();
			setState(30); match(10);
			setState(31); match(16);
			setState(32); match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GraphContext extends ParserRuleContext {
		public Graph_typeContext graph_type() {
			return getRuleContext(Graph_typeContext.class,0);
		}
		public EdgesContext edges() {
			return getRuleContext(EdgesContext.class,0);
		}
		public VerticesContext vertices() {
			return getRuleContext(VerticesContext.class,0);
		}
		public S_nodeContext s_node() {
			return getRuleContext(S_nodeContext.class,0);
		}
		public T_nodeContext t_node() {
			return getRuleContext(T_nodeContext.class,0);
		}
		public GraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graph; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).enterGraph(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).exitGraph(this);
		}
	}

	public final GraphContext graph() throws RecognitionException {
		GraphContext _localctx = new GraphContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_graph);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34); match(5);
			setState(35); match(13);
			setState(36); match(1);
			setState(37); match(21);
			setState(38); graph_type();
			setState(39); match(21);
			setState(40); match(11);
			setState(41); vertices();
			setState(42); edges();
			setState(43); s_node();
			setState(44); t_node();
			setState(45); match(10);
			setState(46); match(13);
			setState(47); match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Graph_typeContext extends ParserRuleContext {
		public Graph_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graph_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).enterGraph_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).exitGraph_type(this);
		}
	}

	public final Graph_typeContext graph_type() throws RecognitionException {
		Graph_typeContext _localctx = new Graph_typeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_graph_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_la = _input.LA(1);
			if ( !(_la==19 || _la==20) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VerticesContext extends ParserRuleContext {
		public List<VertexContext> vertex() {
			return getRuleContexts(VertexContext.class);
		}
		public VertexContext vertex(int i) {
			return getRuleContext(VertexContext.class,i);
		}
		public VerticesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vertices; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).enterVertices(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).exitVertices(this);
		}
	}

	public final VerticesContext vertices() throws RecognitionException {
		VerticesContext _localctx = new VerticesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vertices);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); match(5);
			setState(52); match(4);
			setState(53); match(11);
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54); vertex();
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==5 );
			setState(59); match(10);
			setState(60); match(4);
			setState(61); match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VertexContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GrapherParser.ID, 0); }
		public VertexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vertex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).enterVertex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).exitVertex(this);
		}
	}

	public final VertexContext vertex() throws RecognitionException {
		VertexContext _localctx = new VertexContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_vertex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); match(5);
			setState(64); match(9);
			setState(65); match(8);
			setState(66); match(21);
			setState(67); match(ID);
			setState(68); match(21);
			setState(69); match(14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdgesContext extends ParserRuleContext {
		public List<EdgeContext> edge() {
			return getRuleContexts(EdgeContext.class);
		}
		public EdgeContext edge(int i) {
			return getRuleContext(EdgeContext.class,i);
		}
		public EdgesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edges; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).enterEdges(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).exitEdges(this);
		}
	}

	public final EdgesContext edges() throws RecognitionException {
		EdgesContext _localctx = new EdgesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_edges);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); match(5);
			setState(72); match(6);
			setState(73); match(11);
			setState(75); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(74); edge();
				}
				}
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==5 );
			setState(79); match(10);
			setState(80); match(6);
			setState(81); match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdgeContext extends ParserRuleContext {
		public WeightContext weight() {
			return getRuleContext(WeightContext.class,0);
		}
		public SourceContext source() {
			return getRuleContext(SourceContext.class,0);
		}
		public CapacityContext capacity() {
			return getRuleContext(CapacityContext.class,0);
		}
		public SinkContext sink() {
			return getRuleContext(SinkContext.class,0);
		}
		public EdgeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edge; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).enterEdge(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).exitEdge(this);
		}
	}

	public final EdgeContext edge() throws RecognitionException {
		EdgeContext _localctx = new EdgeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_edge);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); match(5);
			setState(84); match(22);
			setState(85); match(11);
			setState(86); source();
			setState(87); sink();
			setState(90);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(88); capacity();
				}
				break;

			case 2:
				{
				setState(89); weight();
				}
				break;
			}
			setState(92); match(10);
			setState(93); match(22);
			setState(94); match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GrapherParser.ID, 0); }
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).exitSource(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_source);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); match(5);
			setState(97); match(3);
			setState(98); match(8);
			setState(99); match(21);
			setState(100); match(ID);
			setState(101); match(21);
			setState(102); match(14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SinkContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GrapherParser.ID, 0); }
		public SinkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sink; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).enterSink(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).exitSink(this);
		}
	}

	public final SinkContext sink() throws RecognitionException {
		SinkContext _localctx = new SinkContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sink);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(5);
			setState(105); match(15);
			setState(106); match(8);
			setState(107); match(21);
			setState(108); match(ID);
			setState(109); match(21);
			setState(110); match(14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CapacityContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(GrapherParser.INT, 0); }
		public CapacityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_capacity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).enterCapacity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).exitCapacity(this);
		}
	}

	public final CapacityContext capacity() throws RecognitionException {
		CapacityContext _localctx = new CapacityContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_capacity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); match(5);
			setState(113); match(7);
			setState(114); match(2);
			setState(115); match(21);
			setState(116); match(INT);
			setState(117); match(21);
			setState(118); match(14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WeightContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(GrapherParser.INT, 0); }
		public WeightContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_weight; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).enterWeight(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).exitWeight(this);
		}
	}

	public final WeightContext weight() throws RecognitionException {
		WeightContext _localctx = new WeightContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_weight);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); match(5);
			setState(121); match(12);
			setState(122); match(2);
			setState(123); match(21);
			setState(124); match(INT);
			setState(125); match(21);
			setState(126); match(14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class S_nodeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GrapherParser.ID, 0); }
		public S_nodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).enterS_node(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).exitS_node(this);
		}
	}

	public final S_nodeContext s_node() throws RecognitionException {
		S_nodeContext _localctx = new S_nodeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_s_node);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); match(5);
			setState(129); match(18);
			setState(130); match(8);
			setState(131); match(21);
			setState(132); match(ID);
			setState(133); match(21);
			setState(134); match(14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class T_nodeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GrapherParser.ID, 0); }
		public T_nodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_t_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).enterT_node(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrapherListener ) ((GrapherListener)listener).exitT_node(this);
		}
	}

	public final T_nodeContext t_node() throws RecognitionException {
		T_nodeContext _localctx = new T_nodeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_t_node);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); match(5);
			setState(137); match(17);
			setState(138); match(8);
			setState(139); match(21);
			setState(140); match(ID);
			setState(141); match(21);
			setState(142); match(14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		ATNSimulator.deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
	}
}